--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     <div class="section-block">
       <h2>Contact</h2>
       <div class="contact-icons">
-        <a href="https://kkshivanandha@gmail.com" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
+        <a href="mailto:kkshivanandha@gmail.com" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
         <a href="https://www.linkedin.com/in/shivanandha-k-k-7605b4218/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/shivanandhakk" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
         <a href="https://x.com/@shivanandhakk" target="_blank" title="X"><i class="fab fa-x-twitter"></i></a>
