--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
       to { transform: scale(1); opacity: 1; }
     }
 
+    @keyframes slideFromLeft {
+      0% {
+        opacity: 0;
+        transform: translateX(-40px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+
     p {
       font-size: 1.05rem;
       opacity: 0.9;
@@ -79,12 +90,11 @@
       opacity: 0;
       transform: translateY(60px);
       transition: all 0.6s ease-out;
-      animation: slideUp 0.9s ease-in-out forwards;
     }
 
-    @keyframes slideUp {
-      0% { opacity: 0; transform: translateY(60px); }
-      100% { opacity: 1; transform: translateY(0); }
+    .section-block.animate {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     .hero {
@@ -115,7 +125,8 @@
       font-size: 1.1rem;
       font-weight: 600;
       margin-top: 8px;
-      color: var(--highlight-text);
+      color: #fcd34d;
+      animation: slideFromLeft 1s ease-out;
     }
 
     .skills {
@@ -129,23 +140,22 @@
     .skill {
       padding: 10px 18px;
       border-radius: 14px;
-      background: #fffde7;
-      color: var(--accent);
+      background: #fef3c7;
+      color: var(--highlight-text);
       font-size: 0.96rem;
       font-weight: 600;
       transition: all 0.4s ease;
-      animation: skillFloat 4s infinite ease-in-out;
+      animation: pulseGlow 2s infinite;
     }
 
     .skill:hover {
-      transform: scale(1.1);
-      background: var(--accent);
-      color: white;
+      background: var(--accent-alt);
+      color: #fff;
     }
 
-    @keyframes skillFloat {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-5px); }
+    @keyframes pulseGlow {
+      0%, 100% { transform: scale(1); box-shadow: 0 0 8px #fde68a; }
+      50% { transform: scale(1.05); box-shadow: 0 0 16px #facc15; }
     }
 
     .contact-icons {
@@ -217,7 +227,7 @@
       <img src="./yellow.jpeg" alt="Profile" class="hero-img" />
       <div class="hero-text">
         <h1>SHIVANANDHA K K</h1>
-        <p class="hero-subtext">CS Finalist ⚡ | Prompt Crafter 🧠 | Minimal Maker of Meaningful Tech 🔧</p>
+        <p class="hero-subtext" style="color: #eab308;">CS Finalist ⚡ | Prompt Crafter 🧠 | Minimal Maker of Meaningful Tech 🔧</p>
       </div>
     </div>
 
@@ -231,7 +241,7 @@
     <div class="section-block">
       <h2>Skills</h2>
       <div class="skills">
-        <div class="skill">Prompt Engineering</div>
+        <div class="skill">Prompt Engineering Basics</div>
         <div class="skill">Python</div>
         <div class="skill">HTML &amp; CSS</div>
       </div>
